--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ asgiref==3.8.1
 astunparse==1.6.3
 certifi==2024.8.30
 charset-normalizer==3.3.2
+dj-database-url==2.2.0
 Django==5.1.1
 django-cors-headers==4.4.0
 djangorestframework==3.15.2
