--- a/requirements.txt
+++ b/requirements.txt
@@ -31,6 +31,7 @@ protobuf==4.25.5
 psycopg2-binary==2.9.9
 Pygments==2.18.0
 python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
 pytz==2024.2
 requests==2.32.3
 rich==13.8.1
